# fitz

./: AUTHORS  BUGS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  README  TODO  configure.in.in  fitz.ebuild  fitz.kdevelop  kwintheme.html  release  supermake  testfitz
admin/: cvs.sh
client/: CMakeLists.txt  button.cpp  button.h  buttoncache.cpp  buttoncache.h  buttons.xpm  client.cpp  client.h  factory.cpp  factory.h  fakemouse.cpp  fitz.desktop  head_win.xbm
client/config/: CMakeLists.txt  Makefile.am  config.cpp  config.h  configdialog.ui
debian/: changelog  control  copyright  dirs  fitz.doc-base  rules
doc/: Makefile.am
doc/en/: Makefile.am  index.docbook
src/: Makefile.am  bar.cpp  bar.h  barcorner.xbm  button.cpp  button.h  buttoncache.cpp  buttoncache.h  buttons.xpm  client.cpp  client.h  corner.xbm  factory.cpp  factory.h  fakemouse.cpp  fakemouse.h  fitz.h  head_dia.xbm  tail.xbm
src/config/: config.cpp  config.h  configdialog.ui
svg/: svgtoxbm.sh
templates/: cpp  h
